@startuml
title 总览精简 ER 图

skinparam shadowing false
skinparam linetype ortho
hide circle
left to right direction

entity "users\n用户" as users {
  * user_id
  --
  username
}

entity "workspaces\n工作区" as workspaces {
  * workspace_id
  --
  name
}

entity "workspace_memberships\n成员关系" as memberships {
  * membership_id
  --
  workspace_id
  user_id
  role
}

entity "knowledge_bases\n知识库" as knowledge_bases {
  * id
  --
  kb_id
  workspace_id
  name
  status
}

entity "ingest_documents\n文档资产" as documents {
  * document_id
  --
  workspace_id
  kb_id
  latest_version_number
  latest_status
}

entity "ingest_document_versions\n文档版本" as versions {
  * id
  --
  document_id
  version_number
  filename
  status
}

entity "vector_store\n向量分块" as vectors {
  * id
  --
  content
  metadata
  embedding
}

users ||--o{ memberships : 加入
workspaces ||--o{ memberships : 拥有成员
workspaces ||--o{ knowledge_bases : 管理
workspaces ||--o{ documents : 管理
knowledge_bases ||..o{ documents : 归属知识库
documents ||--o{ versions : 拥有版本
versions ||..o{ vectors : 生成向量
documents ||..o{ vectors : metadata.documentId

note bottom
  本图只保留需要说明的核心数据主链路。
  授权明细、登录锁定、审计流水等见分模块 ER 图和完整关系数据表。
end note

@enduml
